--- a/index.html
+++ b/index.html
@@ -1,70 +1,80 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>🎯 추천 결과 저장 + 실시간 배너 알림</title>
+  <meta charset="UTF-8" />
+  <title>🚀 추천 기반 자동 흐름 전환 시스템</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script src="firebase-config.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #ecfdf5; color: #1f2937; }
-    h1 { color: #0f766e; }
+    body { font-family: sans-serif; padding: 2rem; background: #eef2ff; color: #1f2937; }
+    h1 { color: #4f46e5; }
     label, select, input {
       display: block;
       margin: 1rem 0 0.3rem;
     }
-    input, select {
+    select, input {
       padding: 0.6rem;
       width: 100%;
       max-width: 400px;
     }
     button {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       padding: 0.75rem 1.5rem;
-      background: #0d9488;
+      background: #6366f1;
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
     }
-    .banner {
+    .flow {
       margin-top: 2rem;
-      background: #ccfbf1;
-      padding: 1rem;
-      border-left: 5px solid #14b8a6;
-      border-radius: 6px;
+      padding: 1.5rem;
+      background: white;
+      border-left: 5px solid #818cf8;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
     }
   </style>
 </head>
 <body>
-  <h1>🎯 AI 예측 추천 → 저장 + 사용자 배너 출력</h1>
-  <label>고객 이메일</label>
-  <input id="email" placeholder="예: user@agrinexus.com">
-  <label>추천 기능 이름</label>
-  <input id="recommend" placeholder="예: ROI 분석 + PDF 저장 추천">
-  <button onclick="saveAndShow()">추천 저장 + 배너 보기</button>
+  <h1>🚀 추천 기반 다음 기능 자동 전환</h1>
+  <label>최근 실행한 기능</label>
+  <select id="recent">
+    <option value="contract">계약서 생성</option>
+    <option value="forecast">수익 예측</option>
+    <option value="translate">번역기</option>
+    <option value="roi">ROI 분석</option>
+  </select>
+  <label>등급</label>
+  <select id="level">
+    <option value="bronze">Bronze</option>
+    <option value="silver">Silver</option>
+    <option value="gold">Gold</option>
+    <option value="vip">VIP</option>
+  </select>
+  <button onclick="suggest()">다음 기능 추천받기</button>
 
-  <div class="banner" id="banner" style="display:none;"></div>
+  <div class="flow" id="flowbox" style="display:none;"></div>
 
 <script>
-  const db = firebase.firestore();
+  function suggest() {
+    const recent = document.getElementById("recent").value;
+    const level = document.getElementById("level").value;
+    let next = "";
 
-  function saveAndShow() {
-    const email = document.getElementById("email").value;
-    const recommendation = document.getElementById("recommend").value;
+    if (recent === "contract" && level === "vip") {
+      next = "전자서명 + 계약 자동 이메일 전송 → <a href='/contract-sign'>계속하기</a>";
+    } else if (recent === "forecast") {
+      next = "ROI 분석으로 연결 → <a href='/roi-simulation'>ROI 분석</a>";
+    } else if (recent === "translate") {
+      next = "수출입 번역 리포트 생성 → <a href='/email-report'>리포트 전송</a>";
+    } else if (recent === "roi" && level === "gold") {
+      next = "투자자용 IR 리포트 자동 생성 → <a href='/ir-auto-generator'>IR 리포트</a>";
+    } else {
+      next = "대시보드에서 다양한 기능 탐색 → <a href='/dashboard'>전체 기능 보기</a>";
+    }
 
-    const record = {
-      email: email,
-      recommend: recommendation,
-      timestamp: new Date().toISOString()
-    };
-
-    db.collection("recommend_logs").add(record).then(() => {
-      const banner = document.getElementById("banner");
-      banner.innerHTML = `📢 <b>${email}</b> 고객님께 추천된 기능: <b>${recommendation}</b>`;
-      banner.style.display = "block";
-    });
+    document.getElementById("flowbox").innerHTML = `📌 다음 추천 흐름: <strong>${next}</strong>`;
+    document.getElementById("flowbox").style.display = "block";
   }
 </script>
 </body>
